--- a/app/src/main/res/drawable/spl.xml
+++ b/app/src/main/res/drawable/spl.xml
@@ -2,7 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <bitmap
-            android:src="">
+            android:gravity="fill"
+            android:src="@drawable/splash">
 
         </bitmap>
     </item>
