--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -7,17 +7,20 @@
     tools:context=".start">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/web"
         android:layout_width="181dp"
         android:layout_height="49dp"
         android:contentDescription="@string/app_name"
+        android:text="@string/go_for_deleting"
+        android:textColor="#CDDC39"
+        android:textStyle="bold"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
-        app:layout_constraintVertical_bias="0.066" />
+        app:layout_constraintVertical_bias="0.110000014" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -29,10 +32,10 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.074" >
+        app:layout_constraintVertical_bias="0.51">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/youTube"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#00FFFFFF"
@@ -40,16 +43,32 @@
             app:srcCompat="@drawable/tutorial" />
     </androidx.cardview.widget.CardView>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.07999998"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/delete" />
+
     <Button
-        android:id="@+id/button"
-        android:layout_width="181dp"
+        android:id="@+id/more"
+        android:layout_width="130dp"
         android:layout_height="49dp"
         android:contentDescription="@string/hanif"
+        android:text="@string/more_apps"
+        android:textColor="#CDDC39"
+        android:textStyle="bold"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintHorizontal_bias="0.061"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
-        app:layout_constraintVertical_bias="0.066" />
+        app:layout_constraintVertical_bias="0.109" />
 </androidx.constraintlayout.widget.ConstraintLayout>
