--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -7,6 +7,7 @@
     tools:context=".webview">
 
     <WebView
+        android:id="@+id/webView"
         android:layout_width="409dp"
         android:layout_height="657dp"
         app:layout_constraintBottom_toBottomOf="parent"
