--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".webview">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".webview"
+    android:orientation="horizontal">
 
     <WebView
         android:id="@+id/web"
@@ -11,4 +13,12 @@
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:lottie_rawRes="@raw/load"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
 </LinearLayout>
