--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -15,9 +15,10 @@
         tools:layout_editor_absoluteY="1dp" />
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/animationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:id="@+id/loading"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         app:lottie_rawRes="@raw/load"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"/>
