--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -10,9 +10,10 @@
         android:id="@+id/web"
         android:layout_width="181dp"
         android:layout_height="49dp"
+        android:backgroundTint="#FFFFFF"
         android:contentDescription="@string/app_name"
         android:text="@string/go_for_deleting"
-        android:textColor="#CDDC39"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,27 +61,35 @@
         android:id="@+id/more"
         android:layout_width="130dp"
         android:layout_height="49dp"
+        android:backgroundTint="#FFFFFF"
         android:contentDescription="@string/hanif"
         android:text="@string/more_apps"
-        android:textColor="#CDDC39"
+        android:textColor="#000000"
         android:textStyle="bold"
-        app:cornerRadius="20dp"
+        app:cornerRadius="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
+        app:layout_constraintHorizontal_bias="0.117"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
         app:layout_constraintVertical_bias="0.109" />
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
+    <Button
+        android:id="@+id/rateUs"
+        android:layout_width="130dp"
+        android:layout_height="49dp"
+        android:backgroundTint="#FFFFFF"
+        android:contentDescription="@string/hanif"
+        android:text="@string/rate_us"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        app:cornerRadius="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.939" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintVertical_bias="0.442" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
