--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".webview"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:context=".webview">
+
 
     <WebView
         android:id="@+id/web"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+        android:layout_height="match_parent">
+
+    </WebView>
 
     <com.airbnb.lottie.LottieAnimationView
-        android:visibility="invisible"
         android:id="@+id/loading"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        app:lottie_rawRes="@raw/load"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="111dp"
+        android:visibility="invisible"
+        android:layout_centerInParent="true"
         app:lottie_autoPlay="true"
-        app:lottie_loop="true"/>
-</LinearLayout>
+        app:lottie_rawRes="@raw/load"
+        app:lottie_loop="true"
+        android:layout_marginBottom="459dp" />
+
+
+</RelativeLayout>
